Added Standard CSS Styling File for TopNavMenu

--- a/static/help.html
+++ b/static/help.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Corresponding CSS File -->
+	<link href="css/top_nav_bar.css" rel="stylesheet"/>
 	<link href="css/help.css" rel="stylesheet"/>
 
 	<!-- Latest compiled and minified CSS -->
@@ -84,11 +85,11 @@
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#faq">FAQ</button>
 		<div id="faq" class="collapse">
 			<h3>How To Create a Meetup</h3>
-				<p>- Go to Home and click the Create Meetup button located on the bottom right of the page</p>
+				<p>- Go to <a class="home" href="homepage.html">Home</a> and click the Create Meetup button located on the bottom right of the page</p>
 			
 			<hr>
 			<h3>How To View My Meetups</h3>
-				<p>- Go to Home and click the My Meetups button located on the bottom left of the page</p>
+				<p>- Go to <a class="home" href="homepage.html">Home</a> and click the My Meetups button located on the bottom left of the page</p>
 		</div>
 		<hr>
 		<a type="button" class="btn btn-danger" href="contact_us.html">Still Stuck? Contact Us</a>
