--- a/static/settings.html
+++ b/static/settings.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Corresponding CSS File -->
+	<link href="css/top_nav_bar.css" rel="stylesheet"/>
 	<link href="css/settings.css" rel="stylesheet"/>
 
 	<!-- Latest compiled and minified CSS -->
