Minor Styling Changes

--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -80,7 +80,7 @@
 
 	<!-- Main Screen -->
 	<div class="container-fluid text-center">
-		<h1>Contact Us</h1>
+		<h1>My Meetups</h1>
 		<br>
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#richard">Richard Oh</button>
 		<div id="richard" class="collapse">
