--- a/static/homepage.html
+++ b/static/homepage.html
@@ -124,7 +124,7 @@
 	    	</div>
 
 	    	<!-- Center Calendar -->
-	    	<div class="col-sm-8">
+	    	<div class="col-sm-8 calendar">
 				<div class="month"> 
 					<ul>
 						<li class="prev">&#10094;</li>
@@ -169,6 +169,16 @@
 					<li>18</li>
 					<li>19</li>
 					<li>20</li>
+					<li>21</li>
+					<li>22</li>
+					<li>23</li>
+					<li>24</li>
+					<li>25</li>
+					<li>26</li>
+					<li>27</li>
+					<li>28</li>
+					<li>29</li>
+					<li>30</li>
 					<li>31</li>
 				</ul>
 			</div>
@@ -179,13 +189,13 @@
 
 	<!-- Bottom Buttons -->
 	<footer class="container-fluid text-center">
-	    <div class="col-sm-offset-3 col-sm-4">
+	    <div class="col-sm-offset-3 col-sm-4 myMeetupsButton">
 			<a type="button" id="myMeetups" class="btn btn-info btn-lg" href="my_meetups.html">
 	    		<span>My Meetups</span>
 	    	</a>
 	    </div>
 
-	    <div class="col-sm-4">
+	    <div class="col-sm-4 createMeetupButton">
 	    	<a type="button" id="createMeetup" class="btn btn-success btn-lg" href="create_meetup.html">
 	    		<span>Create Meetup</span>
 	    	</a>
