--- a/static/homepage.html
+++ b/static/homepage.html
@@ -5,10 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Corresponding CSS File -->
-	<link href="css/top_nav_bar.css" rel="stylesheet"/>
-	<link href="css/homepage.css" rel="stylesheet"/>
-
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -18,6 +14,10 @@
 
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<!-- Corresponding CSS File -->
+	<link href="css/top_nav_bar.css" rel="stylesheet"/>
+	<link href="css/homepage.css" rel="stylesheet"/>
 
 	<!-- Toggle Popovers -->
 	<script>
@@ -83,9 +83,10 @@
 			</div>
 		</div>
 	</nav>
-	
+	<br>
+
 	<!-- Main Screen -->
-	<div class="container-fluid text-center">
+	<div class="container text-center">
 		<div class="row content">
 
 			<!-- Left Friends List SideNav -->
@@ -93,7 +94,7 @@
 
 				<!-- SideNav Button -->
 				<span id="friendsList" style="font-size:2rem;cursor:pointer" onclick="openNav()">
-					Friends Online <i style="font-size:2rem" class="fa">&#xf138;</i>
+					Friends List <i style="font-size:2rem" class="fa">&#xf138;</i>
 				</span>
 
 				<script>
@@ -130,8 +131,8 @@
 						<li class="prev">&#10094;</li>
 						<li class="next">&#10095;</li>
 						<li>
-							November<br>
-							<span style="font-size:18px">2016</span>
+							<span style="font-size:4rem">November</span><br>
+							<span style="font-size:2rem">2016</span>
 						</li>
 					</ul>
 				</div>
