--- a/static/help.html
+++ b/static/help.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
+	<nav class="navbar navbar-inverse row">
+		<div class="container-fluid col-sm-12">
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
@@ -53,7 +53,7 @@
 
 					<!-- Home -->
 					<li class="active menu">
-						<a class="rightMenu" href="homepage.html">
+						<a id="homeButton" class="rightMenu" href="homepage.html">
 							Home
 						</a>
 					</li>
@@ -64,7 +64,6 @@
 							<span>Corgi </span>
 							<span class="caret "></span>
 						</a>
-
 						<ul class="dropdown-menu text-center">
 							<li><a href="settings.html">Settings</a></li>
 							<li><a href="contact_us.html">Contact Us</a></li>
