--- a/static/homepage.html
+++ b/static/homepage.html
@@ -36,8 +36,8 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
+	<nav class="navbar navbar-inverse row">
+		<div class="container-fluid col-sm-12">
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
@@ -60,7 +60,7 @@
 
 					<!-- Home -->
 					<li class="active menu">
-						<a class="rightMenu" href="homepage.html">
+						<a id="homeButton" class="rightMenu" href="homepage.html">
 							Home
 						</a>
 					</li>
@@ -83,8 +83,7 @@
 			</div>
 		</div>
 	</nav>
-	<br>
-
+	
 	<!-- Main Screen -->
 	<div class="container text-center">
 		<div class="row content">
@@ -125,7 +124,7 @@
 	    	</div>
 
 	    	<!-- Center Calendar -->
-	    	<div class="col-sm-8 calendar">
+	    	<div class="col-sm-9 calendar">
 				<div class="month"> 
 					<ul>
 						<li class="prev">&#10094;</li>
@@ -190,13 +189,13 @@
 
 	<!-- Bottom Buttons -->
 	<footer class="container-fluid text-center">
-	    <div class="col-sm-offset-3 col-sm-4 myMeetupsButton">
+	    <div class="col-sm-offset-2 col-sm-4 myMeetupsButton">
 			<a type="button" id="myMeetups" class="btn btn-info btn-lg" href="my_meetups.html">
 	    		<span>My Meetups</span>
 	    	</a>
 	    </div>
 
-	    <div class="col-sm-4 createMeetupButton">
+	    <div class="col-sm-offset-1 col-sm-4 createMeetupButton">
 	    	<a type="button" id="createMeetup" class="btn btn-success btn-lg" href="create_meetup.html">
 	    		<span>Create Meetup</span>
 	    	</a>
