My Meetups and Create Meetups Reads json

--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -8,16 +8,11 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="datetime/jquery.datetimepicker.css" rel="stylesheet"/>
 
   <!-- Corresponding CSS File -->
   <link href="css/top_nav_bar.css" rel="stylesheet"/>
-  <link href="css/homepage.css" rel="stylesheet"/>
+  <link href="css/create_meetup.css" rel="stylesheet"/>
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
@@ -214,7 +209,7 @@
             </ul>
           </div>
 
-          <h3 id="loc_text"> Selected location </h4>
+          <h3 id="loc_text">Selected location</h4>
           <div id="map"></div>
         </div>
 
@@ -238,20 +233,20 @@
     </div>
 
 
-
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
   	</script>
     <!-- Bootstrap -->
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
   	</script>
+
     <!-- Google Maps API -->
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtN1_XktTqXV4vg_Jcnuon9KXrFykAnlc&callback=initMap">
-    </script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtN1_XktTqXV4vg_Jcnuon9KXrFykAnlc&callback=initMap"></script>
+
     <!-- DateTimePicker -->
-    <script src="datetime/build/jquery.datetimepicker.full.min.js">
-    </script>
-    <script src="js/create_meetups.js"></script>
+    <script src="datetime/build/jquery.datetimepicker.full.min.js"></script>
+
+    <script src="js/create_meetup.js"></script>
   </body>
 </html>
