Styling/JSON Added

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -96,6 +96,7 @@
 					Friends List <i style="font-size:2rem" class="fa">&#xf138;</i>
 				</span>
 
+				<!-- Opens SideNav -->
 				<script>
 					function openNav() {
 					    document.getElementById("mySidenav").style.width="250px";
@@ -182,8 +183,6 @@
 					<li>31</li>
 				</ul>
 			</div>
-
-
 		</div>
 	</div>
 
