Fixed Alignment of Calendar Days

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -147,7 +147,7 @@
 					<li>Su</li>
 				</ul>
 
-				<ul class="days"> 
+				<ul class="days text-left"> 
 					<li>
 						<span class="active" data-toggle="popover" data-placement="top" title="Meetup" data-content="Where/When/Who" style="cursor:pointer">1</span>
 					</li>
