--- a/static/homepage.html
+++ b/static/homepage.html
@@ -108,13 +108,28 @@
 				</script>
 
 				<!-- Sidenav Content -->
-		    	<div id="mySidenav" class="sidenav">
+		    	<div id="mySidenav" class="sidenav text-left">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<span style="cursor:default">
-						<p>Shiba</p>
-						<p>Shiba</p>
-						<p>Shiba</p>
-						<p>Shiba</p>
+						<label id="noFriends">
+							<p>You have no friends :(</p>
+							<p>Why not go add some?</p>
+						</label>
+						<label id="friend1"></label>
+						<label id="friend2"></label>
+						<label id="friend3"></label>
+						<label id="friend4"></label>
+						<label id="friend5"></label>
+						<label id="friend6"></label>
+						<label id="friend7"></label>
+						<label id="friend8"></label>
+						<label id="friend9"></label>
+						<label id="friend10"></label>
+						<label id="friend11"></label>
+						<label id="friend12"></label>
+						<label id="friend13"></label>
+						<label id="friend14"></label>
+						<label id="friend15"></label>
 					</span>
 
 					<!-- Add Friends Button -->
