--- a/static/homepage.html
+++ b/static/homepage.html
@@ -215,5 +215,8 @@
 
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<!-- Corresponding JS File -->
+	<script src="js/homepage.js"></script>
 </body>
 </html>
