--- a/static/help.html
+++ b/static/help.html
@@ -34,7 +34,7 @@
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
-				<button type="button" class="navbar-toggle" data-toggle="collapse" 
+				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse" 
 				data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -57,6 +57,11 @@
 							Home
 						</a>
 					</li>
+				    <li>
+						<a id="options" class="rightMenu" href="my_meetups.html">
+				    		<span>My Meetups</span>
+				    	</a>
+				    </li>
 
 					<!-- User/Options -->
 					<li>
