--- a/static/homepage.html
+++ b/static/homepage.html
@@ -35,7 +35,7 @@
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
-				<button type="button" class="navbar-toggle" data-toggle="collapse" 
+				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse" 
 				data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -58,6 +58,11 @@
 							Home
 						</a>
 					</li>
+				    <li>
+						<a id="options" class="rightMenu" href="my_meetups.html">
+				    		<span>My Meetups</span>
+				    	</a>
+				    </li>
 
 					<!-- User/Options -->
 					<li>
@@ -86,7 +91,7 @@
 			<div class="col-sm-3 text-left">
 
 				<!-- SideNav Button -->
-				<span id="friendsList" style="font-size:2rem;cursor:pointer" onclick="openNav()">
+				<span id="friendsList" onclick="openNav()">
 					Friends List <i style="font-size:2rem" class="fa">&#xf138;</i>
 				</span>
 
@@ -133,8 +138,16 @@
 				</div>
 	    	</div>
 
+
+			<!-- Right -->
+			<div class="col-sm-offset-6 col-sm-3 text-left">
+		    	<a type="button" id="createMeetup" class="btn btn-success" href="create_meetup.html">
+		    		<span>+ Create Meetup</span>
+		    	</a>
+			</div>
+
 	    	<!-- Center Calendar -->
-	    	<div class="col-sm-9 calendar">
+	    	<div class="col-sm-6 calendar">
 				<div class="month"> 
 					<ul>
 						<li class="prev">&#10094;</li>
@@ -192,23 +205,9 @@
 					<li>31</li>
 				</ul>
 			</div>
+
 		</div>
 	</div>
-
-	<!-- Bottom Buttons -->
-	<footer class="container-fluid text-center">
-	    <div class="col-sm-offset-2 col-sm-4 myMeetupsButton">
-			<a type="button" id="myMeetups" class="btn btn-info btn-lg" href="my_meetups.html">
-	    		<span>My Meetups</span>
-	    	</a>
-	    </div>
-
-	    <div class="col-sm-offset-1 col-sm-4 createMeetupButton">
-	    	<a type="button" id="createMeetup" class="btn btn-success btn-lg" href="create_meetup.html">
-	    		<span>Create Meetup</span>
-	    	</a>
-		</div>
-	</footer>
 
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
