--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -34,7 +34,7 @@
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
-				<button type="button" class="navbar-toggle" data-toggle="collapse"
+				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse" 
 				data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -57,12 +57,17 @@
 							Home
 						</a>
 					</li>
+				    <li>
+						<a id="options" class="rightMenu" href="my_meetups.html">
+				    		<span>My Meetups</span>
+				    	</a>
+				    </li>
 
 					<!-- User/Options -->
 					<li>
 						<a id="options" class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">
 							<span>Corgi </span>
-							<span class="caret"></span>
+							<span class="caret "></span>
 						</a>
 						<ul class="dropdown-menu text-center">
 							<li><a href="settings.html">Settings</a></li>
