--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -29,7 +29,7 @@
         <div class="navbar-header">
 
             <!-- Collapse Button -->
-          <button type="button" class="navbar-toggle" data-toggle="collapse" 
+          <button type="button" class="navbar-toggle" data-toggle="collapse"
           data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -71,7 +71,7 @@
         </div>
       </div>
     </nav>
-  
+
     <!-- Main Screen -->
     <div class="container-fluid text-center" id="main">
       <div>
@@ -86,83 +86,83 @@
             <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
                 <li>
                   <div class="checkbox">
-                    <label id="friend1"><input type="checkbox" value=""></label>
+                    <label id="friend1"><input type="checkbox" value="" id="check1"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend2"><input type="checkbox" value=""></label>
+                    <label id="friend2"><input type="checkbox" value="" id="check2"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend3"><input type="checkbox" value=""></label>
+                    <label id="friend3"><input type="checkbox" value="" id="check3"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend4"><input type="checkbox" value=""></label>
+                    <label id="friend4"><input type="checkbox" value="" id="check4"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend5"><input type="checkbox" value=""></label>
+                    <label id="friend5"><input type="checkbox" value="" id="check5"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend6"><input type="checkbox" value=""></label>
+                    <label id="friend6"><input type="checkbox" value="" id="check6"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend7"><input type="checkbox" value=""></label>
+                    <label id="friend7"><input type="checkbox" value="" id="check7"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend8"><input type="checkbox" value=""></label>
+                    <label id="friend8"><input type="checkbox" value="" id="check8"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend9"><input type="checkbox" value=""></label>
+                    <label id="friend9"><input type="checkbox" value="" id="check9"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend10"><input type="checkbox" value=""></label>
+                    <label id="friend10"><input type="checkbox" value="" id="check10"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend11"><input type="checkbox" value=""></label>
+                    <label id="friend11"><input type="checkbox" value="" id="check11"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend12"><input type="checkbox" value=""></label>
+                    <label id="friend12"><input type="checkbox" value="" id="check12"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend13"><input type="checkbox" value=""></label>
+                    <label id="friend13"><input type="checkbox" value="" id="check13"></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend14"><input type="checkbox" value=""></label>
+                    <label id="friend14"><input type="checkbox" value="" id="check14"></label>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label id="friend15"><input type="checkbox" value=""></label>
+                    <label id="friend15"><input type="checkbox" value="" id="check15"></label>
                   </div>
                 </li>
             </ul>
           </div>
 
           <h3 id="date_text"> Select study date and time: </h4>
-          <input id="datetimepicker" type="text">
+          <input id="datetimepicker" type="text" value="">
         </div>
 
         <div class="col-sm-4">
@@ -219,17 +219,19 @@
         </div>
 
         <div class="col-sm-4">
-          <h3 id="stats">Location stats</h4>
+          <div id="loc_stats">
+            <h3 id="stats">Location stats</h4>
 
-          <h4>Quiet?: <h4 id="quiet">N/A</h4></h4>
-          <h4>Crowded?: <h4 id="crowded">N/A</h4></h4>
+            <h4>Noise Level: <h4 id="quiet">N/A</h4></h4>
+            <h4>Crowd Level: <h4 id="crowded">N/A</h4></h4>
+          </div>
           <div>
             <a type="button" id="cancel" class="btn btn-danger btn-lg" href="homepage.html">
               <span>Cancel Meetup</span>
             </a>
           </div>
           <div>
-            <a type="button" id="create" class="btn btn-success btn-lg" href="homepage.html">
+            <a type="button" id="create" class="btn btn-success btn-lg" href="homepage.html" onclick="return createMeetup();">
               <span>Schedule this Meetup!</span>
             </a>
           </div>
