--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -86,7 +86,7 @@
 			  <!-- Friends List Select -->
 			  <div class="col-sm-4 text-center">
           <div class="btn-group" id="friend_select">
-            <h3 id="friend_title">Select Study Buddies!</h3>
+            <h3 id="friend_title">Select Study Buddies! (Max: 5)</h3>
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="friend_dropdown">Choose here<span class="caret"></span></button>
             <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
                 <li>
