Fixed Styling/Website Starts At Login

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -160,8 +160,8 @@
 
 						<!-- Month -->
 						<span id="monthAndYear">
-							<span style="font-size:4rem" data-head-month></span>
-							<span style="font-size:2rem" data-head-year></span>
+							<span id="month" data-head-month></span>
+							<span id="year" data-head-year></span>
 						</span>
 
 						<!-- Next Button -->
