--- a/static/homepage.html
+++ b/static/homepage.html
@@ -204,8 +204,7 @@
 		    $(".responsive-calendar").responsiveCalendar({
 				time: '2016-11',
 				events: {
-					"2016-10-31": {"number": 1, "url": ""},
-					"2016-11-17": {"number": 1, "url": ""}
+					"2016-11-05": {"number": 1, "url": "my_meetups.html"}
 				}
 		    });
 		});
