Added Button Functionality on Create Meetups

--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -235,9 +235,7 @@
             </a>
           </div>
           <div>
-            <a type="button" id="create" class="btn btn-success btn-lg" href="homepage.html" onclick="return createMeetup();">
-              <span>Schedule this Meetup!</span>
-            </a>
+            <input value="Schedule this Meetup!" type="submit" id="create" class="btn btn-success btn-lg" onclick="returnToHome(); return createMeetup();" disabled>
           </div>
         </div>
       </div>
