--- a/static/login.html
+++ b/static/login.html
@@ -54,6 +54,12 @@
           <input id="login" class="btn btn-primary btn-block" value="Login" type="submit" onclick="loginToHome()" disabled>
         </div>
       </div>
+
+      <div class="form-group"> 
+        <div class="col-sm-offset-4 col-sm-5">
+          <input id="signup" class="btn btn-primary btn-block" value="Sign Up" type="submit" onclick="">
+        </div>
+      </div>
     </form>
   </div>
 
