--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -83,160 +83,154 @@
       </div>
 		  <div class="row content">
 			  <!-- Friends List Select -->
-			  <div class="col-sm-4 text-center">
-          <div class="btn-group" id="friend_select">
-            <h3 id="friend_title">Select Study Buddies! (Max: 5)</h3>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="friend_dropdown">Choose here<span class="caret"></span></button>
-            <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
-                <li>
-                  <div class="checkbox">
-                    <label id="friend1"><input type="checkbox" value="" id="check1"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend2"><input type="checkbox" value="" id="check2"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend3"><input type="checkbox" value="" id="check3"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend4"><input type="checkbox" value="" id="check4"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend5"><input type="checkbox" value="" id="check5"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend6"><input type="checkbox" value="" id="check6"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend7"><input type="checkbox" value="" id="check7"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend8"><input type="checkbox" value="" id="check8"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend9"><input type="checkbox" value="" id="check9"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend10"><input type="checkbox" value="" id="check10"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend11"><input type="checkbox" value="" id="check11"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend12"><input type="checkbox" value="" id="check12"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend13"><input type="checkbox" value="" id="check13"></label>
-                  </div>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend14"><input type="checkbox" value="" id="check14"></label>
-                </li>
-                <li>
-                  <div class="checkbox">
-                    <label id="friend15"><input type="checkbox" value="" id="check15"></label>
-                  </div>
-                </li>
-            </ul>
-          </div>
-
-          <h3 id="date_text"> Select study date and time: </h4>
-          <input id="datetimepicker" type="text" value="">
+        <div class="btn-group" id="friend_select">
+          <h3 id="friend_title">Select Study Buddies! (Max: 5)</h3>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="friend_dropdown">Choose here<span class="caret"></span></button>
+          <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
+              <li>
+                <div class="checkbox">
+                  <label id="friend1"><input type="checkbox" value="" id="check1"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend2"><input type="checkbox" value="" id="check2"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend3"><input type="checkbox" value="" id="check3"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend4"><input type="checkbox" value="" id="check4"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend5"><input type="checkbox" value="" id="check5"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend6"><input type="checkbox" value="" id="check6"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend7"><input type="checkbox" value="" id="check7"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend8"><input type="checkbox" value="" id="check8"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend9"><input type="checkbox" value="" id="check9"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend10"><input type="checkbox" value="" id="check10"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend11"><input type="checkbox" value="" id="check11"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend12"><input type="checkbox" value="" id="check12"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend13"><input type="checkbox" value="" id="check13"></label>
+                </div>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend14"><input type="checkbox" value="" id="check14"></label>
+              </li>
+              <li>
+                <div class="checkbox">
+                  <label id="friend15"><input type="checkbox" value="" id="check15"></label>
+                </div>
+              </li>
+          </ul>
         </div>
 
-        <div class="col-sm-4">
-          <div class="dropdown" id="loc_dropdown">
+        <h3 id="date_text"> Select study date and time: </h3>
+        <input id="datetimepicker" type="text" value="">
 
-            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select a study location...<span class="caret"></span></button>
-            <ul class="dropdown-menu scrollable-menu" role="menu" id="location_drop">
-              <!-- Study locations on campus -->
-              <li>
-                <div class="radio">
-                  <label id="loc1"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc1').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc2"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc2').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc3"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc3').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc4"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc4').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc5"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc5').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc6"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc6').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc7"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc7').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-              <li>
-                <div class="radio">
-                  <label id="loc8"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc8').textContent)" name="study_loc"></label>
-                </div>
-              </li>
-            </ul>
-          </div>
+        <div class="dropdown" id="loc_dropdown">
 
-          <h3 id="loc_text">Selected location</h4>
-          <div id="map"></div>
+          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select a study location...<span class="caret"></span></button>
+          <ul class="dropdown-menu scrollable-menu" role="menu" id="location_drop">
+            <!-- Study locations on campus -->
+            <li>
+              <div class="radio">
+                <label id="loc1"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc1').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc2"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc2').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc3"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc3').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc4"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc4').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc5"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc5').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc6"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc6').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc7"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc7').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc8"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc8').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+          </ul>
         </div>
 
-        <div class="col-sm-4">
-          <div id="loc_stats">
-            <h3 id="stats">Location stats</h4>
+        <h3 id="loc_text">Selected location</h4>
+        <div id="map"></div>
 
-            <h4>Noise Level: <h4 id="quiet">N/A</h4></h4>
-            <h4>Crowd Level: <h4 id="crowded">N/A</h4></h4>
-          </div>
-          <div>
-            <a type="button" id="cancel" class="btn btn-danger btn-lg" href="homepage.html">
-              <span>Cancel Meetup</span>
-            </a>
-          </div>
-          <div>
-            <input value="Schedule this Meetup!" type="submit" id="create" class="btn btn-success btn-lg" onclick="returnToHome(); return createMeetup();" disabled>
-          </div>
+        <div id="loc_stats">
+          <h3 id="stats">Location stats</h4>
+
+          <h4>Noise Level: <h4 id="quiet">N/A</h4></h4>
+          <h4>Crowd Level: <h4 id="crowded">N/A</h4></h4>
+        </div>
+        <div>
+          <a type="button" id="cancel" class="btn btn-danger btn-lg" href="homepage.html">
+            <span>Cancel Meetup</span>
+          </a>
+        </div>
+        <div>
+          <input value="Schedule this Meetup!" type="submit" id="create" class="btn btn-success btn-lg" onclick="returnToHome(); createMeetup();" disabled>
         </div>
       </div>
     </div>
