Settings Page Setup!

--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -60,8 +60,8 @@
             <!-- User/Options -->
             <li>
               <a id="options" class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">
-                <span>Corgi </span>
-                <span class="caret "></span>
+                <span id="username"></span>
+                <span class="caret "> </span>
               </a>
               <ul class="dropdown-menu text-center">
                 <li><a href="settings.html">Settings</a></li>
@@ -250,6 +250,8 @@
     <!-- DateTimePicker -->
     <script src="datetime/build/jquery.datetimepicker.full.min.js"></script>
 
+    <!-- Corresponding JS File -->
+    <script src="js/top_nav_bar.js"></script>
     <script src="js/create_meetup.js"></script>
   </body>
 </html>
