--- a/static/homepage.html
+++ b/static/homepage.html
@@ -189,6 +189,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	<!-- Corresponding JS File -->
+	<script src="js/top_nav_bar.js"></script>
 	<script src="js/homepage.js"></script>
 	<script src="js/responsive-calendar.js"></script>
 
