More Styling Changes

--- a/static/contact_us.html
+++ b/static/contact_us.html
@@ -82,21 +82,21 @@
 		<br>
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#richard">Richard Oh</button>
 		<div id="richard" class="collapse in">
-			<p>rioh@ucsd.edu</p>
+			<p style="word-wrap:break-word">rioh@ucsd.edu</p>
 			<p>- OR -</p>
 			<p> (###)-###-#### </p>
 		</div>
-		<br>
+		<hr>
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#ingrid">Ingrid Ou</button>
 		<div id="ingrid" class="collapse in">
-			<p>iou@ucsd.edu</p>
+			<p style="word-wrap:break-word">iou@ucsd.edu</p>
 			<p>- OR -</p>
 			<p> (###)-###-#### </p>
 		</div>
-		<br>
+		<hr>
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#jovan">Jovan Limosnero</button>
 		<div id="jovan" class="collapse in">
-			<p>jlimosne@ucsd.edu</p>
+			<p style="word-wrap:break-word">jlimosne@ucsd.edu</p>
 			<p>- OR -</p>
 			<p> (###)-###-#### </p>
 		</div>
