--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -77,7 +77,7 @@
 	</nav>
 
 	<!-- Main Screen -->
-	<div class="container-fluid text-center">
+	<div id="mainscreen" class="container-fluid text-center">
 		<div class="row content">
 			<h1>My Meetups</h1>
 			<br>
