--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -172,6 +172,8 @@
         <h3 id="date_text"> Select study date and time: </h3>
         <input id="datetimepicker" type="text" value="">
 
+        <hr>
+
         <div class="dropdown" id="loc_dropdown">
 
           <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select a study location...<span class="caret"></span></button>
@@ -220,8 +222,6 @@
           </ul>
         </div>
 
-        <hr>
-
         <h3 id="loc_text">Selected location</h3>
         <div id="map"></div>
 
@@ -233,7 +233,7 @@
         </div>
 
         <div class="row">
-          <input value="Create Meetup!" type="submit" id="create" class="btn btn-success btn-lg col-sm-offset-1 col-sm-4" onclick="returnToHome(); createMeetup();" disabled>
+          <input value="Create Meetup!" type="submit" id="create" class="btn btn-success btn-lg col-sm-offset-1 col-sm-4" onclick="addEvent(); returnToHome(); createMeetup();" disabled>
 
           <input value="Cancel Meetup" type="button" id="cancel" class="btn btn-danger btn-lg col-sm-offset-2 col-sm-4" onclick="returnToHome()">
         </div>
@@ -255,5 +255,21 @@
     <!-- Corresponding JS File -->
     <script src="js/top_nav_bar.js"></script>
     <script src="js/create_meetup.js"></script>
+    <script src="js/responsive-calendar.js"></script>
+
+    <script>
+      function addEvent() {
+        var val, date, num;
+        val = $(document.getElementById("datetimepicker")).val();
+        date = val.substr(0, 4) + "-" + val.substr(5, 2) + "-" + val.substr(8, 2);
+        num = 1;
+        date = "\"" + date + "\"";
+        console.log(date);
+
+        $('.responsive-calendar').responsiveCalendar ('edit', {
+          date: {"number": num}
+        });
+      }
+    </script>
   </body>
 </html>
