--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -28,7 +28,7 @@
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
-				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse" 
+				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse"
 				data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -79,7 +79,7 @@
 	<!-- Main Screen -->
 	<div id="mainscreen" class="container-fluid text-center">
 		<div class="row content">
-			<h1>My Meetups</h1>
+			<h1>My Meetups (Max: 5)</h1>
 			<br>
 			<ul class="scrollable-menu" role="menu" id="meetings_scroll">
 				<li>
@@ -97,6 +97,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d1">N/A</h5>
 						</div>
+
 					</div>
 				</li>
 				<li>
