--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -80,6 +80,7 @@
     <div class="container-fluid text-center" id="mainscreen">
       <div>
         <h1 id="page_name">Create a Meetup!</h1>
+        <h5> Max: 5 </h5>
       </div>
 
       <hr>
