--- a/static/homepage.html
+++ b/static/homepage.html
@@ -29,7 +29,7 @@
 			<div class="navbar-header">
 
 		    	<!-- Collapse Button -->
-				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse" 
+				<button type="button" id="navbarCollapseToggle" class="navbar-toggle" data-toggle="collapse"
 				data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<!-- Main Screen -->
 	<div class="container text-center">
 		<div class="row content">
@@ -86,7 +86,7 @@
 
 				<!-- SideNav Button -->
 				<span id="friendsList" onclick="openNav()">
-					Friends List <i style="font-size:2rem" class="fa">&#xf138;</i>
+					Friends List (Max: 15) <i style="font-size:2rem" class="fa">&#xf138;</i>
 				</span>
 
 				<!-- Opens SideNav -->
@@ -126,9 +126,13 @@
 					</span>
 
 					<!-- Add Friends Button -->
-					<button type="button" id="addFriend" class="btn btn-primary btn-lg disabled">
-						+ Add Friends
-					</button>
+					<div class="form-group">
+						<label class="control-label" for="addFr"></label>
+						<div>
+							<input type="text" id="addFr" class="form-control" placeholder="Enter Friend's Username">
+						</div>
+					</div>
+					<input value = "+ Add Friend" type="submit" id="addFriend" class="btn btn-primary btn-lg" onclick="addFriend()" disabled>
 				</div>
 	    	</div>
 
@@ -217,9 +221,9 @@
 		$(document).ready(function () {
 			var date = "2016-11-06";
 			$('.responsive-calendar').responsiveCalendar('edit', {
-	        	date: {"number": 1}
-	        });
-        });
+	      date: {"number": 1}
+	    });
+    });
 	</script>
 </body>
 </html>
