Reading friends on CM

--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -97,7 +97,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d1">N/A</h5>
 						</div>
-
+						<input value="Cancel Meetup" type="button" id="cancel" class="btn btn-danger pull-right">
 					</div>
 				</li>
 				<li>
@@ -115,6 +115,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d2">N/A</h5>
 						</div>
+						<input value="Cancel Meetup" type="button" id="cancel" class="btn btn-danger pull-right">
 					</div>
 				</li>
 				<li>
@@ -132,6 +133,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d3">N/A</h5>
 						</div>
+						<input value="Cancel Meetup" type="button" id="cancel" class="btn btn-danger pull-right">
 					</div>
 				</li>
 				<li>
@@ -149,6 +151,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d4">N/A</h5>
 						</div>
+						<input value="Cancel Meetup" type="button" id="cancel" class="btn btn-danger pull-right">
 					</div>
 				</li>
 				<li>
@@ -166,6 +169,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d5">N/A</h5>
 						</div>
+						<input value="Cancel Meetup" type="button" id="cancel" class="btn btn-danger pull-right">
 					</div>
 				</li>
 			</div>
