--- a/static/login.html
+++ b/static/login.html
@@ -30,7 +30,7 @@
       <div class="form-group">
         <label class="control-label col-sm-offset-2 col-sm-2 leftText" for="email">Email:</label>
         <div class="col-sm-5">
-          <input type="email" class="form-control" id="email" placeholder="Enter email">
+          <input type="text" class="form-control" id="email" placeholder="Enter email">
         </div>
       </div>
 
@@ -43,7 +43,7 @@
 
       <div class="form-group"> 
         <div class="col-sm-offset-4 col-sm-5">
-          <input id="login" class="btn btn-primary btn-block" value="Login" type="submit" onclick="loginToHome()" disabled>
+          <input id="login" class="btn btn-primary btn-block" value="Login" type="button" onclick="loginToHome()" disabled>
         </div>
       </div>
 
