--- a/static/register.html
+++ b/static/register.html
@@ -30,7 +30,7 @@
       <div class="form-group">
         <label class="control-label col-sm-offset-2 col-sm-2 leftText" for="email">Email:</label>
         <div class="col-sm-5">
-          <input type="email" class="form-control" id="email" placeholder="Enter Your Email">
+          <input type="text" class="form-control" id="email" placeholder="Enter Your Email">
         </div>
       </div>
 
@@ -50,7 +50,7 @@
 
       <div class="form-group"> 
         <div class="col-sm-offset-4 col-sm-5">
-          <input id="signup" class="btn btn-primary btn-block" value="Sign Up" type="submit" onclick="login()" disabled>
+          <input id="signup" class="btn btn-primary btn-block" value="Sign Up" type="button" onclick="storeAccount(); login()" disabled>
         </div>
       </div>
     </form>
