Friends List update

--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -97,7 +97,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d1">N/A</h5>
 						</div>
-						<input value="Cancel Meetup" type="button" id="cancel1" class="btn btn-danger pull-right">
+						<input value="Cancel Meetup" type="button" id="cancel1" class="btn btn-danger pull-right" onclick="deleteMeetup(1)">
 					</div>
 				</li>
 				<li>
@@ -115,7 +115,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d2">N/A</h5>
 						</div>
-						<input value="Cancel Meetup" type="button" id="cancel2" class="btn btn-danger pull-right">
+						<input value="Cancel Meetup" type="button" id="cancel2" class="btn btn-danger pull-right" onclick="deleteMeetup(2)">
 					</div>
 				</li>
 				<li>
@@ -133,7 +133,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d3">N/A</h5>
 						</div>
-						<input value="Cancel Meetup" type="button" id="cancel3" class="btn btn-danger pull-right">
+						<input value="Cancel Meetup" type="button" id="cancel3" class="btn btn-danger pull-right" onclick="deleteMeetup(3)">
 					</div>
 				</li>
 				<li>
@@ -151,7 +151,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d4">N/A</h5>
 						</div>
-						<input value="Cancel Meetup" type="button" id="cancel4" class="btn btn-danger pull-right">
+						<input value="Cancel Meetup" type="button" id="cancel4" class="btn btn-danger pull-right" onclick="deleteMeetup(4)">
 					</div>
 				</li>
 				<li>
@@ -169,7 +169,7 @@
 							<h4>Date/Time:</h4>
 							<h5 id="d5">N/A</h5>
 						</div>
-						<input value="Cancel Meetup" type="button" id="cancel5" class="btn btn-danger pull-right">
+						<input value="Cancel Meetup" type="button" id="cancel5" class="btn btn-danger pull-right" onclick="deleteMeetup(5)">
 					</div>
 				</li>
 			</div>
